# rkmedia_study

./: 1.c  CMakeLists.txt  README.md  jiance.c
0708ffmpeg/: 1.c  2.c  a.out  test.aac
include/: common.h  fengzhuang.h  hxy_audio.h  hxy_media.h
qt/build-untitled-Desktop_Qt_5_12_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  untitled
qt/untitled/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
src/: fengzhuang.cpp  hxy_adio.cpp  hxy_media.cpp  main.cpp
